# flowpilot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: IMPLEMENTATION.md  README.md
docs/api/: README.md
docs/cli/: README.md
docs/examples/: README.md  daily-code-review.md  data-pipeline.md  file-backup.md  github-webhook-handler.md  parallel-api-fetcher.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/guides/: README.md  templating.md  triggers.md  troubleshooting.md  workflow-syntax.md
docs/nodes/: README.md  claude.md  condition.md  delay.md  file.md  http.md  log.md  loop.md  parallel.md  shell.md
docs/plans/: 2025-12-12-flowpilot-design.md
frontend/: README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/executions/: ExecutionFilters.tsx  ExecutionRow.test.tsx  ExecutionRow.tsx  ExecutionStats.test.tsx  ExecutionStats.tsx  LiveLogViewer.tsx  index.ts
frontend/src/components/flow/: BaseNode.tsx  ExecutionSidebar.tsx  (+2 more)
frontend/src/hooks/: useExecutions.ts  useWorkflows.test.ts  useWorkflows.ts
frontend/src/lib/: api.ts  constants.ts  flowParser.test.ts  flowParser.ts  yamlParser.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/stores/: app.ts
frontend/src/types/: index.ts
scripts/: build.py
src/flowpilot/: __init__.py  __main__.py  config.py
src/flowpilot/api/: __init__.py  app.py  dependencies.py  webhooks.py
src/flowpilot/cli/: __init__.py  utils.py
src/flowpilot/engine/: __init__.py  circuit_breaker.py  context.py  error_reporter.py  errors.py  executor.py  parser.py  retry.py  runner.py  template.py
src/flowpilot/models/: __init__.py  nodes.py  triggers.py  workflow.py
src/flowpilot/scheduler/: __init__.py  file_watcher.py  manager.py  service.py  triggers.py
src/flowpilot/storage/: __init__.py  database.py  models.py  repositories.py
tests/: __init__.py  conftest.py  test_api.py  test_circuit_breaker.py  test_cli.py  test_cli_logs.py  test_cli_scheduling.py  test_context.py  test_delay_node.py  test_error_handling.py  test_error_reporter.py  test_execution_api.py  test_executor.py  test_file_watcher.py  test_loop_node.py  test_nodes.py  test_nodes_claude_api.py  test_nodes_claude_cli.py  test_nodes_condition.py  test_nodes_file.py  test_nodes_http.py  test_nodes_shell.py  test_parallel_node.py  test_parser.py  test_retry.py  test_runner.py  test_scheduler_service.py  test_scheduler_triggers.py  test_serve_command.py  test_storage.py  test_template.py  test_triggers.py  test_webhooks.py  test_workflow.py
tests/fixtures/: claude_api_workflow.yaml  claude_cli_workflow.yaml  file_watch_workflow.yaml  invalid_workflow.yaml  valid_complex_workflow.yaml  valid_workflow.yaml  webhook_workflow.yaml
(+60 files in other folders)
